<resources>
    <string name="app_name">Assignment 2</string>
    <string name="action_settings">Settings</string>>

    <string name="select_a_lens_to_use">Select a lens to use:</string>
    <string name="title_activity_add_lens">AddLens</string>
    <string name="title_activity_lens_list">LensList</string>
    <string name="ex_canon">ex: Canon</string>
    <string name="make">Make</string>
    <string name="hint">hint</string>
    <string name="ex_200_for_200mm">ex: 200 for 200mm</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="aperture">Aperture</string>
    <string name="save">Save</string>
    <string name="focal_length_mm">Focal Length [mm]</string>
    <string name="name">Name</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="enter_all_values2">Enter all values</string>
    <string name="enter_all_values3">Enter all values</string>
    <string name="enter_all_values4">Enter all values</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="textview">TextView</string>
    <string name="circle_of_confusion_mm">Circle of Confusion [mm]</string>
    <string name="calculate">Calculate</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="_0_029">0.029</string>
    <string name="selected_aperture">Selected Aperture</string>

</resources>
