<?xml version="1.0" encoding="utf-8"?>
<!-- Line 54 taken from -> https://developer.android.com/training/keyboard-input/style-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/makeTitle"
        android:layout_width="158dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/make"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCamera"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ex_canon"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeTitle" />

    <TextView
        android:id="@+id/focalTitle"
        android:layout_width="259dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/focal_length_mm"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCamera" />

    <EditText
        android:id="@+id/inputFocalLength"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ex_200_for_200mm"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focalTitle" />

    <TextView
        android:id="@+id/apertureTitle"
        android:layout_width="192dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/aperture"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFocalLength" />

    <EditText
        android:id="@+id/inputAperture"
        android:layout_width="333dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="ex: 2.8 for F2.8"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apertureTitle" />

    <Button
        android:id="@+id/saveOption"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAperture" />

    <Button
        android:id="@+id/cancelOption"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAperture" />

</androidx.constraintlayout.widget.ConstraintLayout>
